Zuvor war eine Linie noch falsch

--- a/index.html
+++ b/index.html
@@ -6,22 +6,21 @@
   <title>KIPP – 8×8 Raster</title>
   <style>
     :root{
-      /* Deine Farben */
+      /* Farben */
       --violett: rgb(164, 27, 133);
       --blau:    rgb(0, 107, 179);
       --gruen:   rgb(0, 166, 82);
       --gelb:    rgb(249, 150, 30);
 
-      /* Optik */
       --black:   #161616;
       --gridline:#1f1f1f;
 
-      --inner-bg:#E7D5BC;      /* hellbeige Fläche */
-      --beige-3x3:#E2C9AD;     /* 2B–4D */
+      --inner-bg:#E7D5BC;      /* hellbeige (große Flächen) */
+      --beige-3x3:#E2C9AD;     /* dunkleres Beige (2B–4D) */
       --brown:   #5B3A29;
 
-      --g: 3px;                /* Raster-Linien (Gap) */
-      --color-inset: 4px;      /* schwarzer Rand innerhalb Farbflächen */
+      --g: 3px;                /* Gap-Linien */
+      --color-inset: 4px;      /* schwarzer Rand in Farbflächen */
     }
 
     html, body { height: 100%; }
@@ -34,12 +33,11 @@
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
 
-    /* Platzierung: über der Mitte */
     .stage{
       width: 100%;
       display:flex;
       justify-content:center;
-      padding-top: 10vh;
+      padding-top: 10vh; /* über der Mitte */
       padding-bottom: 6vh;
     }
 
@@ -57,7 +55,6 @@
       grid-template-rows: repeat(8, 1fr);
       gap: var(--g);
 
-      /* Zellgröße für Overlays berechenbar */
       --cell: calc((100% - (7 * var(--g))) / 8);
       user-select:none;
       touch-action: manipulation;
@@ -69,13 +66,13 @@
       position: relative;
     }
 
-    /* Außenrand schwarz */
     .cell.border{ background: var(--black); }
 
-    /* 2B–4D leicht anderes Beige */
     .cell.beige3{ background: var(--beige-3x3); }
 
-    /* Farbflächen am Rand mit schwarzem Innenrand */
+    /* fix: 2B soll hellbeige sein (nicht dunkelbeige) */
+    .cell.lightbeige{ background: var(--inner-bg) !important; }
+
     .cell.colored{
       box-shadow: inset 0 0 0 var(--color-inset) var(--black);
     }
@@ -95,31 +92,25 @@
     .cell.fine{ box-shadow: inset 0 0 0 2px var(--brown); }
     .cell.beige3.fine{ box-shadow: inset 0 0 0 2px var(--brown); }
 
-    /* Diese Zellen werden “unsichtbar”, weil ein Overlay darüber die Fläche vollflächig macht */
+    /* Untergrund-Zellen unter großen Flächen unsichtbar */
     .cell.merged{
       background: transparent !important;
       box-shadow: none !important;
       border-radius: 0 !important;
     }
 
-    /* Overlays: vollflächige Bereiche ohne Unterteilungen */
     .overlay{
       position:absolute;
       z-index: 5;
       pointer-events:none;
       border-radius: 10px;
+      background: var(--inner-bg);
     }
-
-    /* Helper: Rechnet Grid-Positionen (1..8) in px um */
-    /* left = padding(g) + (colIndex-1)*(cell+g)  */
-    /* top  = padding(g) + (rowIndex-1)*(cell+g)  */
-    /* width = cols*cell + (cols-1)*g */
-    /* height= rows*cell + (rows-1)*g */
   </style>
 </head>
 <body>
   <div class="stage">
-    <div id="board" class="board" aria-label="8x8 Raster"></div>
+    <div id="board" class="board"></div>
   </div>
 
   <script>
@@ -128,9 +119,8 @@
     const cols = ["A","B","C","D","E","F","G","H"];
     const rows = [1,2,3,4,5,6,7,8];
 
-    const colIndex = c => cols.indexOf(c) + 1; // 1..8
+    const colIndex = c => cols.indexOf(c) + 1;
 
-    // Farbzuordnung aus deiner Liste (Achtung: "gelb" = dein Orange)
     const colored = new Map([
       ["3A","gelb"], ["4A","gruen"], ["5A","violett"], ["6A","blau"],
       ["8C","gruen"], ["8D","gelb"], ["8E","gruen"], ["8F","gelb"],
@@ -168,21 +158,16 @@
 
     const fineSet = new Set(["4B","3B","2C","2D"]);
 
-    // Bereiche, die vollflächig sein müssen (Zellen darunter -> class "merged")
-    // 1) 3C–4D (2×2)
-    function inBlock_3C_4D(r,c){
-      return (r >= 3 && r <= 4) && (c >= "C" && c <= "D");
-    }
-    // 2) 2E–4G (3×3)
-    function inBlock_2E_4G(r,c){
-      return (r >= 2 && r <= 4) && (c >= "E" && c <= "G");
-    }
-    // 3) 5B–7G (3×6)
-    function inBlock_5B_7G(r,c){
-      return (r >= 5 && r <= 7) && (c >= "B" && c <= "G");
-    }
+    // Merge-Zellen (werden von Overlays abgedeckt)
+    function inBlock_3C_4D(r,c){ return (r >= 3 && r <= 4) && (c >= "C" && c <= "D"); }
+    function inBlock_2E_4G(r,c){ return (r >= 2 && r <= 4) && (c >= "E" && c <= "G"); }
 
-    // Grid bauen
+    // Änderung 2: große Fläche muss jetzt auch über die Linie 4? -> 5? drübergehen
+    // Also 2E–7G (6×3) wird EIN Stück (ohne Linie zwischen Reihe 4 und 5).
+    function inBlock_2E_7G(r,c){ return (r >= 2 && r <= 7) && (c >= "E" && c <= "G"); }
+
+    function inBlock_5B_7G(r,c){ return (r >= 5 && r <= 7) && (c >= "B" && c <= "G"); }
+
     for(const r of rows){
       for(const c of cols){
         const key = `${r}${c}`;
@@ -191,7 +176,11 @@
         cell.dataset.coord = key;
 
         if(isBorder(r, c)) cell.classList.add("border");
+
         if(!isBorder(r, c) && isBeige3(r, c)) cell.classList.add("beige3");
+
+        // fix: 2B soll hellbeige sein
+        if(key === "2B") cell.classList.add("lightbeige");
 
         if(colored.has(key)){
           cell.classList.add("colored");
@@ -201,17 +190,15 @@
         for(const cl of brownFrameClasses(r, c)) cell.classList.add(cl);
         if(fineSet.has(key)) cell.classList.add("fine");
 
-        // Zellen, die zu “vollflächigen” Bereichen gehören, transparent schalten:
-        if(inBlock_3C_4D(r,c) || inBlock_2E_4G(r,c) || inBlock_5B_7G(r,c)){
-          // NICHT den Außenrand anfassen
-          if(!isBorder(r,c)) cell.classList.add("merged");
+        // merged unter Overlays
+        if((inBlock_3C_4D(r,c) || inBlock_2E_7G(r,c) || inBlock_5B_7G(r,c)) && !isBorder(r,c)){
+          cell.classList.add("merged");
         }
 
         board.appendChild(cell);
       }
     }
 
-    // Overlays hinzufügen (decken die Gap-Linien ab => Fläche wirkt “ein Stück”)
     function addOverlay(rowStart, colStart, rowCount, colCount, bgCss){
       const ov = document.createElement("div");
       ov.className = "overlay";
@@ -220,26 +207,21 @@
       const g = "var(--g)";
       const cell = "var(--cell)";
 
-      const leftExpr = `calc(${g} + (${colStart-1}) * (${cell} + ${g}))`;
-      const topExpr  = `calc(${g} + (${rowStart-1}) * (${cell} + ${g}))`;
-      const widthExpr  = `calc(${colCount} * ${cell} + (${colCount-1}) * ${g})`;
-      const heightExpr = `calc(${rowCount} * ${cell} + (${rowCount-1}) * ${g})`;
-
-      ov.style.left = leftExpr;
-      ov.style.top = topExpr;
-      ov.style.width = widthExpr;
-      ov.style.height = heightExpr;
+      ov.style.left   = `calc(${g} + (${colStart-1}) * (${cell} + ${g}))`;
+      ov.style.top    = `calc(${g} + (${rowStart-1}) * (${cell} + ${g}))`;
+      ov.style.width  = `calc(${colCount} * ${cell} + (${colCount-1}) * ${g})`;
+      ov.style.height = `calc(${rowCount} * ${cell} + (${rowCount-1}) * ${g})`;
 
       board.appendChild(ov);
     }
 
-    // 3C–4D (2×2) -> hellbeige (wie Q-Flächen)
+    // 3C–4D (2×2) bleibt ein Stück
     addOverlay(3, colIndex("C"), 2, 2, "var(--inner-bg)");
 
-    // 2E–4G (3×3) -> hellbeige (Q1/Q2 Bereich)
-    addOverlay(2, colIndex("E"), 3, 3, "var(--inner-bg)");
+    // Änderung 2: 2E–7G EIN Stück (6×3) => keine Linie zwischen 4E/F/G und 5E/F/G
+    addOverlay(2, colIndex("E"), 6, 3, "var(--inner-bg)");
 
-    // 5B–7G (3×6) -> hellbeige (Q3/Q2 Bereich groß)
+    // 5B–7G (3×6) bleibt ein Stück
     addOverlay(5, colIndex("B"), 3, 6, "var(--inner-bg)");
   </script>
 </body>
