--- a/index.html
+++ b/index.html
@@ -1,228 +1,244 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>KIPP – 8×8 Raster</title>
+
   <style>
     :root{
-      /* Farben */
+      /* Farben (deine Palette) */
       --violett: rgb(164, 27, 133);
       --blau:    rgb(0, 107, 179);
       --gruen:   rgb(0, 166, 82);
-      --gelb:    rgb(249, 150, 30);
+      --orange:  rgb(249, 150, 30);
 
-      --black:   #161616;
-      --gridline:#1f1f1f;
+      /* Grundlook (Fairy KIPP) */
+      --bg1: #2a1710;
+      --bg2: #120907;
 
-      --inner-bg:#E7D5BC;      /* hellbeige (große Flächen) */
-      --beige-3x3:#E2C9AD;     /* dunkleres Beige (2B–4D) */
-      --brown:   #5B3A29;
+      /* Raster/Board */
+      --cell-gap: clamp(5px, 1.1vmin, 10px);      /* Abstand zwischen den 8×8 Feldern */
+      --cell-radius: clamp(6px, 1.1vmin, 12px);   /* Rundung der einzelnen Rand-Kacheln */
 
-      --g: 3px;                /* Gap-Linien */
-      --color-inset: 4px;      /* schwarzer Rand in Farbflächen */
+      /* Boxboden (große Innenfläche) */
+      --floor: #e8dcc6;         /* etwas dunkler als vorher, “Tiefe” */
+      --floor-edge: #5a3a2a;    /* dunkler Brauneinfassung (für Würfel-Rahmen etc.) */
+
+      /* Würfel (symbolisiert) */
+      --cube-fill: #ead7be;     /* leicht anders als Boden */
+      --cube-border: #7a4a34;
+
+      /* Steckfelder-Outline */
+      --slot-border: rgba(0,0,0,0.55);
     }
 
     html, body { height: 100%; }
     body{
       margin:0;
-      background: radial-gradient(1200px 800px at 50% 10%, #3a251b 0%, #1b120e 60%, #120b08 100%);
       display:flex;
       justify-content:center;
-      align-items:flex-start;
+      background: radial-gradient(ellipse at top, rgba(255,255,255,0.06), transparent 45%),
+                  radial-gradient(ellipse at bottom, rgba(0,0,0,0.55), transparent 55%),
+                  linear-gradient(180deg, var(--bg1), var(--bg2));
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
 
+    /* Board-Zone: Schwerpunkt über der Mitte */
     .stage{
-      width: 100%;
+      width: min(94vw, 680px);
+      margin-top: 14vh;     /* über der Mitte, nicht “ganz oben” */
       display:flex;
       justify-content:center;
-      padding-top: 10vh; /* über der Mitte */
-      padding-bottom: 6vh;
     }
 
     .board{
-      width: min(94vw, 680px);
-      aspect-ratio: 1 / 1;
-      background: var(--gridline);
-      padding: var(--g);
-      border-radius: 14px;
-      box-shadow: 0 18px 45px rgba(0,0,0,.35);
-      position: relative;
+      position:relative;
+      width: 100%;
+      aspect-ratio: 1 / 1; /* Quadrat */
+    }
 
+    /* 8×8 Raster als Basis */
+    .grid{
+      position:absolute;
+      inset:0;
       display:grid;
       grid-template-columns: repeat(8, 1fr);
       grid-template-rows: repeat(8, 1fr);
-      gap: var(--g);
-
-      --cell: calc((100% - (7 * var(--g))) / 8);
-      user-select:none;
-      touch-action: manipulation;
+      gap: var(--cell-gap);
     }
 
     .cell{
-      background: var(--inner-bg);
-      border-radius: 6px;
-      position: relative;
+      background:#0b0b0b;                 /* “schwarz” */
+      border-radius: var(--cell-radius);   /* Randkacheln dürfen ruhig weich wirken */
+      box-shadow:
+        0 0 0 1px rgba(255,255,255,0.03) inset,
+        0 10px 18px rgba(0,0,0,0.35);
     }
 
-    .cell.border{ background: var(--black); }
+    /* farbige Randfelder */
+    .c-orange{ background: var(--orange); }
+    .c-gruen { background: var(--gruen);  }
+    .c-violett{ background: var(--violett); }
+    .c-blau  { background: var(--blau);   }
 
-    .cell.beige3{ background: var(--beige-3x3); }
+    /* ===========================================
+       BOXBODEN (große Innenfläche)
+       -> SHARPKANTIG, keine Radien (dein Punkt)
+       -> wird als EIN Quadrat gelesen
+       =========================================== */
+    .floor{
+      position:absolute;
+      /* Innenfläche = alles ohne Rand: Reihen 2..7 & Spalten B..G */
+      left: calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
+      top:  calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
+      width: calc(6 * (100% - 7 * var(--cell-gap)) / 8 + 5 * var(--cell-gap));
+      height: calc(6 * (100% - 7 * var(--cell-gap)) / 8 + 5 * var(--cell-gap));
 
-    /* fix: 2B soll hellbeige sein (nicht dunkelbeige) */
-    .cell.lightbeige{ background: var(--inner-bg) !important; }
-
-    .cell.colored{
-      box-shadow: inset 0 0 0 var(--color-inset) var(--black);
+      background: var(--floor);
+      border-radius: 0; /* WICHTIG: scharfkantig */
+      box-shadow:
+        0 18px 28px rgba(0,0,0,0.35),
+        0 0 0 1px rgba(0,0,0,0.12) inset;
+      z-index: 2;
     }
 
-    /* 4px Dunkelbraun-Rahmen um 2B–4D */
-    .bt { box-shadow: inset 0 4px 0 0 var(--brown); }
-    .bb { box-shadow: inset 0 -4px 0 0 var(--brown); }
-    .bl { box-shadow: inset 4px 0 0 0 var(--brown); }
-    .br { box-shadow: inset -4px 0 0 0 var(--brown); }
-
-    .cell.colored.bt{ box-shadow: inset 0 0 0 var(--color-inset) var(--black), inset 0 4px 0 0 var(--brown); }
-    .cell.colored.bb{ box-shadow: inset 0 0 0 var(--color-inset) var(--black), inset 0 -4px 0 0 var(--brown); }
-    .cell.colored.bl{ box-shadow: inset 0 0 0 var(--color-inset) var(--black), inset 4px 0 0 0 var(--brown); }
-    .cell.colored.br{ box-shadow: inset 0 0 0 var(--color-inset) var(--black), inset -4px 0 0 0 var(--brown); }
-
-    /* 2px Rahmen um 4B, 3B, 2C, 2D */
-    .cell.fine{ box-shadow: inset 0 0 0 2px var(--brown); }
-    .cell.beige3.fine{ box-shadow: inset 0 0 0 2px var(--brown); }
-
-    /* Untergrund-Zellen unter großen Flächen unsichtbar */
-    .cell.merged{
-      background: transparent !important;
-      box-shadow: none !important;
-      border-radius: 0 !important;
-    }
-
-    .overlay{
+    /* ===========================================
+       WÜRFEL (symbolisiert) – DARF Radien haben
+       -> liegt AUF dem Boden, nicht “Bodenform”
+       -> 3×3 Bereich: 2B..4D
+       =========================================== */
+    .cube{
       position:absolute;
       z-index: 5;
-      pointer-events:none;
-      border-radius: 10px;
-      background: var(--inner-bg);
+
+      /* Start bei Zelle B2 */
+      left: calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
+      top:  calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
+
+      /* Größe = 3 Zellen breit/hoch + 2 gaps */
+      width: calc(3 * (100% - 7 * var(--cell-gap)) / 8 + 2 * var(--cell-gap));
+      height: calc(3 * (100% - 7 * var(--cell-gap)) / 8 + 2 * var(--cell-gap));
+
+      background: var(--cube-fill);
+      border: 4px solid var(--cube-border); /* “Würfelrahmen” */
+      border-radius: clamp(10px, 2.2vmin, 18px);
+      box-shadow:
+        0 12px 22px rgba(0,0,0,0.30),
+        0 0 0 1px rgba(255,255,255,0.12) inset;
     }
+
+    /* 4 Steckfelder im Würfel:
+       Q0: AnF1=4B, AnF2=3B, AnF3=2C, AnF4=2D
+       -> nur OUTLINE (2px), keine Extra-Rundung nötig
+    */
+    .slots{
+      position:absolute;
+      inset: 0;
+      display:grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      gap: var(--cell-gap);
+      padding: var(--cell-gap);
+      box-sizing: border-box;
+    }
+
+    .slot{
+      background: transparent;
+      border: 2px solid var(--slot-border);
+      border-radius: 10px; /* darf minimal, ist “Steckfeld” */
+    }
+
+    /* Slot-Positionen in 3×3:
+       2C = row1 col2
+       2D = row1 col3
+       3B = row2 col1
+       4B = row3 col1
+    */
+    .s-2c{ grid-row:1; grid-column:2; }
+    .s-2d{ grid-row:1; grid-column:3; }
+    .s-3b{ grid-row:2; grid-column:1; }
+    .s-4b{ grid-row:3; grid-column:1; }
   </style>
 </head>
+
 <body>
   <div class="stage">
-    <div id="board" class="board"></div>
+    <div class="board">
+      <!-- große, scharfkantige Bodenfläche -->
+      <div class="floor" aria-hidden="true"></div>
+
+      <!-- 8×8 Raster (Rand + farbige Felder) -->
+      <div id="grid" class="grid" aria-label="8×8 Raster"></div>
+
+      <!-- symbolisierter Würfel (darf Radien haben) -->
+      <div class="cube" aria-label="Würfel">
+        <div class="slots" aria-hidden="true">
+          <div class="slot s-2c"></div>
+          <div class="slot s-2d"></div>
+          <div class="slot s-3b"></div>
+          <div class="slot s-4b"></div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script>
-    const board = document.getElementById("board");
-
+    // Hilfsfunktionen
     const cols = ["A","B","C","D","E","F","G","H"];
-    const rows = [1,2,3,4,5,6,7,8];
 
-    const colIndex = c => cols.indexOf(c) + 1;
+    function key(r, cLetter){
+      return `${r}${cLetter}`;
+    }
 
-    const colored = new Map([
-      ["3A","gelb"], ["4A","gruen"], ["5A","violett"], ["6A","blau"],
-      ["8C","gruen"], ["8D","gelb"], ["8E","gruen"], ["8F","gelb"],
-      ["6H","violett"], ["5H","blau"], ["4H","gelb"], ["3H","gruen"],
-      ["1F","blau"], ["1E","violett"], ["1D","blau"], ["1C","violett"],
+    // Deine Farbfelder (wie du sie durchgegeben hast)
+    // 3A Orange, 4A Grün, 5A Violett, 6A Blau,
+    // 8C Grün, 8D Orange, 8E Grün, 8F Orange,
+    // 6H Violett, 5H Blau, 4H Orange, 3H Grün,
+    // 1F Blau, 1E Violett, 1D Blau, 1C Violett.
+    const colorMap = new Map([
+      [key(3,"A"), "c-orange"],
+      [key(4,"A"), "c-gruen"],
+      [key(5,"A"), "c-violett"],
+      [key(6,"A"), "c-blau"],
+
+      [key(8,"C"), "c-gruen"],
+      [key(8,"D"), "c-orange"],
+      [key(8,"E"), "c-gruen"],
+      [key(8,"F"), "c-orange"],
+
+      [key(6,"H"), "c-violett"],
+      [key(5,"H"), "c-blau"],
+      [key(4,"H"), "c-orange"],
+      [key(3,"H"), "c-gruen"],
+
+      [key(1,"F"), "c-blau"],
+      [key(1,"E"), "c-violett"],
+      [key(1,"D"), "c-blau"],
+      [key(1,"C"), "c-violett"],
     ]);
 
-    function colorToCss(name){
-      switch(name){
-        case "violett": return "var(--violett)";
-        case "blau":    return "var(--blau)";
-        case "gruen":   return "var(--gruen)";
-        case "gelb":    return "var(--gelb)";
-        default:        return "var(--inner-bg)";
-      }
-    }
+    // Raster bauen
+    const grid = document.getElementById("grid");
 
-    function isBorder(r, c){
-      return r === 1 || r === 8 || c === "A" || c === "H";
-    }
-
-    function isBeige3(r, c){
-      return (r >= 2 && r <= 4) && (c >= "B" && c <= "D");
-    }
-
-    function brownFrameClasses(r, c){
-      const cls = [];
-      if(!isBeige3(r, c)) return cls;
-      if(r === 2) cls.push("bt");
-      if(r === 4) cls.push("bb");
-      if(c === "B") cls.push("bl");
-      if(c === "D") cls.push("br");
-      return cls;
-    }
-
-    const fineSet = new Set(["4B","3B","2C","2D"]);
-
-    // Merge-Zellen (werden von Overlays abgedeckt)
-    function inBlock_3C_4D(r,c){ return (r >= 3 && r <= 4) && (c >= "C" && c <= "D"); }
-    function inBlock_2E_4G(r,c){ return (r >= 2 && r <= 4) && (c >= "E" && c <= "G"); }
-
-    // Änderung 2: große Fläche muss jetzt auch über die Linie 4? -> 5? drübergehen
-    // Also 2E–7G (6×3) wird EIN Stück (ohne Linie zwischen Reihe 4 und 5).
-    function inBlock_2E_7G(r,c){ return (r >= 2 && r <= 7) && (c >= "E" && c <= "G"); }
-
-    function inBlock_5B_7G(r,c){ return (r >= 5 && r <= 7) && (c >= "B" && c <= "G"); }
-
-    for(const r of rows){
-      for(const c of cols){
-        const key = `${r}${c}`;
+    for(let r=1; r<=8; r++){
+      for(let c=0; c<8; c++){
         const cell = document.createElement("div");
         cell.className = "cell";
-        cell.dataset.coord = key;
 
-        if(isBorder(r, c)) cell.classList.add("border");
-
-        if(!isBorder(r, c) && isBeige3(r, c)) cell.classList.add("beige3");
-
-        // fix: 2B soll hellbeige sein
-        if(key === "2B") cell.classList.add("lightbeige");
-
-        if(colored.has(key)){
-          cell.classList.add("colored");
-          cell.style.background = colorToCss(colored.get(key));
+        const coord = key(r, cols[c]);
+        if(colorMap.has(coord)){
+          cell.classList.add(colorMap.get(coord));
         }
 
-        for(const cl of brownFrameClasses(r, c)) cell.classList.add(cl);
-        if(fineSet.has(key)) cell.classList.add("fine");
+        // Hinweis: Die Innenfläche soll “flächig” wirken.
+        // Das lösen wir NICHT über “einzelne beige Zellen”,
+        // sondern über die große .floor-Fläche, die darunter liegt.
+        // Darum bleiben die Innenzellen hier einfach schwarz/neutral.
 
-        // merged unter Overlays
-        if((inBlock_3C_4D(r,c) || inBlock_2E_7G(r,c) || inBlock_5B_7G(r,c)) && !isBorder(r,c)){
-          cell.classList.add("merged");
-        }
-
-        board.appendChild(cell);
+        grid.appendChild(cell);
       }
     }
-
-    function addOverlay(rowStart, colStart, rowCount, colCount, bgCss){
-      const ov = document.createElement("div");
-      ov.className = "overlay";
-      ov.style.background = bgCss;
-
-      const g = "var(--g)";
-      const cell = "var(--cell)";
-
-      ov.style.left   = `calc(${g} + (${colStart-1}) * (${cell} + ${g}))`;
-      ov.style.top    = `calc(${g} + (${rowStart-1}) * (${cell} + ${g}))`;
-      ov.style.width  = `calc(${colCount} * ${cell} + (${colCount-1}) * ${g})`;
-      ov.style.height = `calc(${rowCount} * ${cell} + (${rowCount-1}) * ${g})`;
-
-      board.appendChild(ov);
-    }
-
-    // 3C–4D (2×2) bleibt ein Stück
-    addOverlay(3, colIndex("C"), 2, 2, "var(--inner-bg)");
-
-    // Änderung 2: 2E–7G EIN Stück (6×3) => keine Linie zwischen 4E/F/G und 5E/F/G
-    addOverlay(2, colIndex("E"), 6, 3, "var(--inner-bg)");
-
-    // 5B–7G (3×6) bleibt ein Stück
-    addOverlay(5, colIndex("B"), 3, 6, "var(--inner-bg)");
   </script>
 </body>
 </html>
