--- a/index.html
+++ b/index.html
@@ -1,244 +1,161 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>KIPP – 8×8 Raster</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>KIPP – 8×8 Raster</title>
 
-  <style>
-    :root{
-      /* Farben (deine Palette) */
-      --violett: rgb(164, 27, 133);
-      --blau:    rgb(0, 107, 179);
-      --gruen:   rgb(0, 166, 82);
-      --orange:  rgb(249, 150, 30);
+<style>
+  :root {
+    --black: #111;
+    --bg: #2b1a12;
 
-      /* Grundlook (Fairy KIPP) */
-      --bg1: #2a1710;
-      --bg2: #120907;
+    --orange: #f29a2e;
+    --green: #00a652;
+    --violet: #9c2a8e;
+    --blue: #0071bc;
 
-      /* Raster/Board */
-      --cell-gap: clamp(5px, 1.1vmin, 10px);      /* Abstand zwischen den 8×8 Feldern */
-      --cell-radius: clamp(6px, 1.1vmin, 12px);   /* Rundung der einzelnen Rand-Kacheln */
+    --beige-light: #efe0c6;
+    --beige-dark: #e6d3b5;
 
-      /* Boxboden (große Innenfläche) */
-      --floor: #e8dcc6;         /* etwas dunkler als vorher, “Tiefe” */
-      --floor-edge: #5a3a2a;    /* dunkler Brauneinfassung (für Würfel-Rahmen etc.) */
+    --wood: #caa06a;
+    --wood-dark: #9b6a3a;
+  }
 
-      /* Würfel (symbolisiert) */
-      --cube-fill: #ead7be;     /* leicht anders als Boden */
-      --cube-border: #7a4a34;
+  body {
+    margin: 0;
+    background: radial-gradient(circle at top, #3a2418, var(--bg));
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    font-family: system-ui, sans-serif;
+  }
 
-      /* Steckfelder-Outline */
-      --slot-border: rgba(0,0,0,0.55);
-    }
+  /* Schwerpunkt über der Mitte */
+  .stage {
+    width: 100%;
+    margin-top: 14vh;
+    display: flex;
+    justify-content: center;
+  }
 
-    html, body { height: 100%; }
-    body{
-      margin:0;
-      display:flex;
-      justify-content:center;
-      background: radial-gradient(ellipse at top, rgba(255,255,255,0.06), transparent 45%),
-                  radial-gradient(ellipse at bottom, rgba(0,0,0,0.55), transparent 55%),
-                  linear-gradient(180deg, var(--bg1), var(--bg2));
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-    }
+  /* QUADRAT – IMMER */
+  .board {
+    width: min(94vw, 78vh);
+    height: min(94vw, 78vh);
+    aspect-ratio: 1 / 1;
 
-    /* Board-Zone: Schwerpunkt über der Mitte */
-    .stage{
-      width: min(94vw, 680px);
-      margin-top: 14vh;     /* über der Mitte, nicht “ganz oben” */
-      display:flex;
-      justify-content:center;
-    }
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    gap: 8px;
+  }
 
-    .board{
-      position:relative;
-      width: 100%;
-      aspect-ratio: 1 / 1; /* Quadrat */
-    }
+  .cell {
+    background: var(--black);
+    border-radius: 8px;
+  }
 
-    /* 8×8 Raster als Basis */
-    .grid{
-      position:absolute;
-      inset:0;
-      display:grid;
-      grid-template-columns: repeat(8, 1fr);
-      grid-template-rows: repeat(8, 1fr);
-      gap: var(--cell-gap);
-    }
+  /* Rand schwarz */
+  .row1, .row8, .colA, .colH {
+    background: var(--black);
+  }
 
-    .cell{
-      background:#0b0b0b;                 /* “schwarz” */
-      border-radius: var(--cell-radius);   /* Randkacheln dürfen ruhig weich wirken */
-      box-shadow:
-        0 0 0 1px rgba(255,255,255,0.03) inset,
-        0 10px 18px rgba(0,0,0,0.35);
-    }
+  /* Farbsteine (Rahmen) */
+  .orange { background: var(--orange); }
+  .green  { background: var(--green); }
+  .violet { background: var(--violet); }
+  .blue   { background: var(--blue); }
 
-    /* farbige Randfelder */
-    .c-orange{ background: var(--orange); }
-    .c-gruen { background: var(--gruen);  }
-    .c-violett{ background: var(--violett); }
-    .c-blau  { background: var(--blau);   }
+  /* große Boxbodenfläche – SCHARKANTIG */
+  .box {
+    background: var(--beige-light);
+    border-radius: 0;
+  }
 
-    /* ===========================================
-       BOXBODEN (große Innenfläche)
-       -> SHARPKANTIG, keine Radien (dein Punkt)
-       -> wird als EIN Quadrat gelesen
-       =========================================== */
-    .floor{
-      position:absolute;
-      /* Innenfläche = alles ohne Rand: Reihen 2..7 & Spalten B..G */
-      left: calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
-      top:  calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
-      width: calc(6 * (100% - 7 * var(--cell-gap)) / 8 + 5 * var(--cell-gap));
-      height: calc(6 * (100% - 7 * var(--cell-gap)) / 8 + 5 * var(--cell-gap));
+  /* kleine beige Fläche oben links */
+  .beige {
+    background: var(--beige-dark);
+  }
 
-      background: var(--floor);
-      border-radius: 0; /* WICHTIG: scharfkantig */
-      box-shadow:
-        0 18px 28px rgba(0,0,0,0.35),
-        0 0 0 1px rgba(0,0,0,0.12) inset;
-      z-index: 2;
-    }
+  /* Würfel (symbolisch) */
+  .cube {
+    background: var(--beige-dark);
+    border: 4px solid var(--wood-dark);
+    border-radius: 14px;
+    box-shadow: 10px 12px 18px rgba(0,0,0,.35);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 8px;
+    padding: 10px;
+  }
 
-    /* ===========================================
-       WÜRFEL (symbolisiert) – DARF Radien haben
-       -> liegt AUF dem Boden, nicht “Bodenform”
-       -> 3×3 Bereich: 2B..4D
-       =========================================== */
-    .cube{
-      position:absolute;
-      z-index: 5;
-
-      /* Start bei Zelle B2 */
-      left: calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
-      top:  calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
-
-      /* Größe = 3 Zellen breit/hoch + 2 gaps */
-      width: calc(3 * (100% - 7 * var(--cell-gap)) / 8 + 2 * var(--cell-gap));
-      height: calc(3 * (100% - 7 * var(--cell-gap)) / 8 + 2 * var(--cell-gap));
-
-      background: var(--cube-fill);
-      border: 4px solid var(--cube-border); /* “Würfelrahmen” */
-      border-radius: clamp(10px, 2.2vmin, 18px);
-      box-shadow:
-        0 12px 22px rgba(0,0,0,0.30),
-        0 0 0 1px rgba(255,255,255,0.12) inset;
-    }
-
-    /* 4 Steckfelder im Würfel:
-       Q0: AnF1=4B, AnF2=3B, AnF3=2C, AnF4=2D
-       -> nur OUTLINE (2px), keine Extra-Rundung nötig
-    */
-    .slots{
-      position:absolute;
-      inset: 0;
-      display:grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(3, 1fr);
-      gap: var(--cell-gap);
-      padding: var(--cell-gap);
-      box-sizing: border-box;
-    }
-
-    .slot{
-      background: transparent;
-      border: 2px solid var(--slot-border);
-      border-radius: 10px; /* darf minimal, ist “Steckfeld” */
-    }
-
-    /* Slot-Positionen in 3×3:
-       2C = row1 col2
-       2D = row1 col3
-       3B = row2 col1
-       4B = row3 col1
-    */
-    .s-2c{ grid-row:1; grid-column:2; }
-    .s-2d{ grid-row:1; grid-column:3; }
-    .s-3b{ grid-row:2; grid-column:1; }
-    .s-4b{ grid-row:3; grid-column:1; }
-  </style>
+  .slot {
+    background: transparent;
+    border: 2px solid rgba(0,0,0,.35);
+    border-radius: 10px;
+  }
+</style>
 </head>
 
 <body>
   <div class="stage">
     <div class="board">
-      <!-- große, scharfkantige Bodenfläche -->
-      <div class="floor" aria-hidden="true"></div>
 
-      <!-- 8×8 Raster (Rand + farbige Felder) -->
-      <div id="grid" class="grid" aria-label="8×8 Raster"></div>
+      <!-- Reihe 1 -->
+      <div class="cell colA row1"></div>
+      <div class="cell row1"></div>
+      <div class="cell row1 violet"></div>
+      <div class="cell row1 blue"></div>
+      <div class="cell row1 violet"></div>
+      <div class="cell row1 blue"></div>
+      <div class="cell row1"></div>
+      <div class="cell colH row1"></div>
 
-      <!-- symbolisierter Würfel (darf Radien haben) -->
-      <div class="cube" aria-label="Würfel">
-        <div class="slots" aria-hidden="true">
-          <div class="slot s-2c"></div>
-          <div class="slot s-2d"></div>
-          <div class="slot s-3b"></div>
-          <div class="slot s-4b"></div>
-        </div>
+      <!-- Reihe 2 -->
+      <div class="cell colA orange"></div>
+      <div class="cell beige"></div>
+      <div class="cell beige"></div>
+      <div class="cell beige"></div>
+      <div class="cell box" style="grid-column: span 3; grid-row: span 2;"></div>
+      <div class="cell colH green"></div>
+
+      <!-- Reihe 3 -->
+      <div class="cell colA green"></div>
+      <div class="cell beige"></div>
+      <div class="cell beige"></div>
+      <div class="cell beige"></div>
+      <div class="cell colH orange"></div>
+
+      <!-- Reihe 4 -->
+      <div class="cell colA violet"></div>
+      <div class="cell box" style="grid-column: span 5; grid-row: span 3;"></div>
+      <div class="cell colH blue"></div>
+
+      <!-- Reihe 7 -->
+      <div class="cell colA blue"></div>
+      <div class="cell colH violet"></div>
+
+      <!-- Reihe 8 -->
+      <div class="cell colA row8"></div>
+      <div class="cell row8 green"></div>
+      <div class="cell row8 orange"></div>
+      <div class="cell row8 green"></div>
+      <div class="cell row8 orange"></div>
+      <div class="cell row8"></div>
+      <div class="cell row8"></div>
+      <div class="cell colH row8"></div>
+
+      <!-- Würfel -->
+      <div class="cube" style="grid-column: 3 / span 2; grid-row: 3 / span 2;">
+        <div class="slot"></div>
+        <div class="slot"></div>
+        <div class="slot"></div>
+        <div class="slot"></div>
       </div>
+
     </div>
   </div>
-
-  <script>
-    // Hilfsfunktionen
-    const cols = ["A","B","C","D","E","F","G","H"];
-
-    function key(r, cLetter){
-      return `${r}${cLetter}`;
-    }
-
-    // Deine Farbfelder (wie du sie durchgegeben hast)
-    // 3A Orange, 4A Grün, 5A Violett, 6A Blau,
-    // 8C Grün, 8D Orange, 8E Grün, 8F Orange,
-    // 6H Violett, 5H Blau, 4H Orange, 3H Grün,
-    // 1F Blau, 1E Violett, 1D Blau, 1C Violett.
-    const colorMap = new Map([
-      [key(3,"A"), "c-orange"],
-      [key(4,"A"), "c-gruen"],
-      [key(5,"A"), "c-violett"],
-      [key(6,"A"), "c-blau"],
-
-      [key(8,"C"), "c-gruen"],
-      [key(8,"D"), "c-orange"],
-      [key(8,"E"), "c-gruen"],
-      [key(8,"F"), "c-orange"],
-
-      [key(6,"H"), "c-violett"],
-      [key(5,"H"), "c-blau"],
-      [key(4,"H"), "c-orange"],
-      [key(3,"H"), "c-gruen"],
-
-      [key(1,"F"), "c-blau"],
-      [key(1,"E"), "c-violett"],
-      [key(1,"D"), "c-blau"],
-      [key(1,"C"), "c-violett"],
-    ]);
-
-    // Raster bauen
-    const grid = document.getElementById("grid");
-
-    for(let r=1; r<=8; r++){
-      for(let c=0; c<8; c++){
-        const cell = document.createElement("div");
-        cell.className = "cell";
-
-        const coord = key(r, cols[c]);
-        if(colorMap.has(coord)){
-          cell.classList.add(colorMap.get(coord));
-        }
-
-        // Hinweis: Die Innenfläche soll “flächig” wirken.
-        // Das lösen wir NICHT über “einzelne beige Zellen”,
-        // sondern über die große .floor-Fläche, die darunter liegt.
-        // Darum bleiben die Innenzellen hier einfach schwarz/neutral.
-
-        grid.appendChild(cell);
-      }
-    }
-  </script>
 </body>
 </html>
